Add google analytics id

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Gregory Ganley
 description: Yes, this is ripping off daringfireball.net
+google_analytics: UA-108145484-1
