--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Gregory Ganley
-description: Yes, this is ripping off daringfireball.net
+description: A place for my things. And yes, this is clearly ripping off <a href="daringfireball.net">John Gruber</a>
 google_analytics: UA-108145484-1
